; ModuleID = '/home/carl/AnghaBench/linux/tools/perf/arch/x86/annotate/extr_instructions.c_x86__annotate_init.c'
source_filename = "/home/carl/AnghaBench/linux/tools/perf/arch/x86/annotate/extr_instructions.c_x86__annotate_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.arch = type { i32 }

@SYMBOL_ANNOTATE_ERRNO__ARCH_INIT_CPUID_PARSING = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.arch*, i8*)* @x86__annotate_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @x86__annotate_init(%struct.arch* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.arch*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  store %struct.arch* %0, %struct.arch** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 0, i32* %6, align 4
  %7 = load %struct.arch*, %struct.arch** %4, align 8
  %8 = getelementptr inbounds %struct.arch, %struct.arch* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %12

11:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %27

12:                                               ; preds = %2
  %13 = load i8*, i8** %5, align 8
  %14 = icmp ne i8* %13, null
  br i1 %14, label %15, label %23

15:                                               ; preds = %12
  %16 = load %struct.arch*, %struct.arch** %4, align 8
  %17 = load i8*, i8** %5, align 8
  %18 = call i64 @x86__cpuid_parse(%struct.arch* %16, i8* %17)
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %22

20:                                               ; preds = %15
  %21 = load i32, i32* @SYMBOL_ANNOTATE_ERRNO__ARCH_INIT_CPUID_PARSING, align 4
  store i32 %21, i32* %6, align 4
  br label %22

22:                                               ; preds = %20, %15
  br label %23

23:                                               ; preds = %22, %12
  %24 = load %struct.arch*, %struct.arch** %4, align 8
  %25 = getelementptr inbounds %struct.arch, %struct.arch* %24, i32 0, i32 0
  store i32 1, i32* %25, align 4
  %26 = load i32, i32* %6, align 4
  store i32 %26, i32* %3, align 4
  br label %27

27:                                               ; preds = %23, %11
  %28 = load i32, i32* %3, align 4
  ret i32 %28
}

declare dso_local i64 @x86__cpuid_parse(%struct.arch*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
